<resources>
    <string name="app_name">Hw6</string>
    <string name="image_label">Tap to Set an Image</string>
    <string name="email_hint">Email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="surname_hint">Surname</string>
    <string name="name_hint">Name</string>
    <string name="phone_type_content_label">phone type</string>
    <string name="update_button_label">Edit</string>
    <string name="call_button_label">Call</string>
    <string name="search_label">Search</string>
    <string name="intent_type">image</string>
    <string name="select_image">Select image</string>
</resources>